tdf#81943 sw RTF import: fix missing wrap in background for in-table shape

Regression from commit 015fd55c94b7b650ed8e572cafaf3b0f903b01b9
(tdf#96275 RTF import: fix anchor of shapes inside tables, 2016-05-10),
remember more context when delaying the import of a shape.

(cherry picked from commit 0c91f8f839d36c8b5af272b1d3c835d2f4af6b65)

Conflicts:
	writerfilter/source/rtftok/rtfdocumentimpl.cxx

Change-Id: Idc02868eb3fe5b7637c9fd00c841bf71423adf2b